--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --open",
     "dev": "ng serve --host 0.0.0.0 --disable-host-check --proxy-config proxy.conf.json",
     "build": "ng build",
     "test": "ng test",
