--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "firebase": "^5.6.0",
     "ng-zorro-antd": "^1.8.0",
     "rxjs": "~6.2.0",
+    "uid": "0.0.2",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
