--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "@ngrx/store-devtools": "^6.1.2",
     "core-js": "^2.5.4",
     "firebase": "^5.6.0",
+    "lodash": "^4.17.11",
     "ng-zorro-antd": "^1.8.0",
     "rxjs": "~6.2.0",
     "uid": "0.0.2",
